--- a/src/stylesheets/content.css
+++ b/src/stylesheets/content.css
@@ -21,7 +21,6 @@
   font-size: inherit;
   font-style: normal;
   font-weight: 500;
-  max-width: 100%;
   outline: none !important;
   text-align: center;
   text-decoration: none;
@@ -36,6 +35,7 @@
   transition: background 0.1s ease-out 0s, box-shadow 0.15s cubic-bezier(0.47, 0.03, 0.49, 1.38) 0s;
   vertical-align: middle;
   width: auto;
+  max-width: 170px;
 }
 
 .use-plugin-button:hover, .use-plugin-button:focus, .use-plugin-button[aria-expanded="true"] {
@@ -80,8 +80,7 @@
   line-height: 0;
   font-size: 0px;
   user-select: none;
-  margin: 0px 4px;
-  margin-right: 4px;
+  margin-left: 4px;
   transition: opacity 0.3s ease 0s;
   opacity: 1;
   padding: 4px;
@@ -93,7 +92,6 @@
   width: 100%;
   margin-bottom: 6px;
   padding-bottom: 6px;
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;
 }
 
 .checkbox-wrapper-24 .checkbox {
@@ -105,8 +103,9 @@
 }
 
 .checkbox-wrapper-24 label {
-  display: inline-block;
+  display: flex;
   cursor: pointer;
+  align-items: center;
   position: relative;
 }
 .checkbox-wrapper-24 label span {
@@ -119,7 +118,7 @@
   border: 2px solid #36B37E;
   border-radius: 50%;
   vertical-align: middle;
-  margin-right: 10px;
+  margin-right: 20%;
   transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78, -1.22, 0.17, 1.89);
 }
 .checkbox-wrapper-24 label span:before {
